Replaced 'good for new contributors' with 'quick win'

--- a/development/dev/create/editor/index.html.md.erb
+++ b/development/dev/create/editor/index.html.md.erb
@@ -312,7 +312,7 @@ Do not relate issue weight directly to time (see [GitLab's relevant guide on wei
 
 We on the Editor team weight issues by leveraging the [Fibonacci Sequence](https://en.wikipedia.org/wiki/Fibonacci_number).
 
-- Weight 1: Really simple and small (for example, changing copy text or 1-2 lines of CSS). Most of these issues should have a `good for new contributors` and/or `Hackathon - Candidate` label attached.
+- Weight 1: Really simple and small (for example, changing copy text or 1-2 lines of CSS). Most of these issues should have a [`quick win`](https://gitlab.com/groups/gitlab-org/-/issues/?sort=created_date&state=opened&label_name%5B%5D=quick%20win&first_page_size=50) label attached.
 - Weight 2: Straightforward, but involves updating actual behavior (for example, fixing and testing a trivial bug).
 - Weight 3: Straightforward, but involves possible discovery or unforeseen complexity (for example, fixing and testing a non-trivial bug).
 - Weight 5: Changing the behavior of pre-existing modules, or adding significant new behavior (for example, making the Web IDE left-sidebar collapsible).
