--- a/development/dev/create/source-code-be/index.html.md.erb
+++ b/development/dev/create/source-code-be/index.html.md.erb
@@ -102,7 +102,7 @@ The Triage Report can be quite long, and it important to deal with it efficientl
 * Apply ~regression label if it is one, consider bumping severity numbers if recent.
 * Apply ~"severity::4", ~"priority::4", %Backlog if a smaller issue with no significant impact.
 * If an uncontroversial problem with a clear solution, consider applying ~"Seeking community contributions"
-* If also an easier issue which might interest a newer community contributor, consider applying ~"low hanging fruit", ~"good for new contributors".
+* If also an easier issue which might interest a newer community contributor, consider applying ~"quick win".
 * Apply ~"priority::3" ~"severity::3" if a bug with a workaround.
 * Anything causing data loss, severe performance impact or security apply a ~"severity::1"  and ~"priority::1" or ~"priority::2" and assign to a team member.
 * Unassign yourself from the Triage Report
