--- a/development/ops/release/index.html.md.erb
+++ b/development/ops/release/index.html.md.erb
@@ -84,7 +84,7 @@ upcoming office hours, [check out the epic](https://gitlab.com/groups/gitlab-org
 
 We use the following labels to promote issues among community contributors:
 - `~"Seeking community contributions"`. Sometimes we can write down the clear implementation instructions, but don't have the capacity to work on the issue ourselves. We mark such issues as `~"Seeking community contributions"`.
-- If the issue is also almost trivial, we apply `~"good for new contributors"`. Such issues can help community contributors to learn the review process without need for deep understanding of our codebase.
+- If the issue is also almost trivial, we apply `~"quick win"`. Such issues can help community contributors to learn the review process without need for deep understanding of our codebase.
 
 #### Handling
 
