Fix environments async issue template

--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -259,9 +259,9 @@ As a part of the async update it's important to verify that the issue and relate
 ```
 ## Async status update
 
-Complete: 80%
-Confidence: 90%
-Notes: expecting to go into review tomorrow
+- Complete: 80%
+- Confidence: 90%
+- Notes: expecting to go into review tomorrow
 ```
 
 To simplify the work of adding and keeping track of async updates [TalTal](https://taltal-new.netlify.app/) can be used.
