chore: Add SAST Eng kibana dash to SAST group page

--- a/development/sec/secure/static-analysis/index.html.md.erb
+++ b/development/sec/secure/static-analysis/index.html.md.erb
@@ -178,6 +178,7 @@ Observability is a critical component to any high-availability system and it is 
 
 - [Secure::Static Analysis Group Error Budget](https://dashboards.gitlab.net/d/stage-groups-static_analysis/stage-groups-static-analysis-group-dashboard)
 - [SAST Analyzer Registry Traffic](https://log.gprd.gitlab.net/app/dashboards#/view/84aa3f10-89d2-11ec-9dd2-93d354bef8e7?_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-24h%2Cto%3Anow)))
+- [SAST Engineering Kibana Dashboard](https://log.gprd.gitlab.net/app/dashboards#/view/1eebd010-9a73-11ec-9dd2-93d354bef8e7)
 
 We also utilize Sisense for long-term trend forecasting. While this is not a recommended observability tool, it can be helpful to recognize trends over time as they surface.
 
