Fix docker executors broken link in Secure Sub Department Handbook

--- a/development/sec/secure/index.html.md.erb
+++ b/development/sec/secure/index.html.md.erb
@@ -337,7 +337,7 @@ a minimal featureset is required:
 
 - [ ] Has [permissive software license](/handbook/engineering/open-source/#acceptable-licenses)
 - [ ] Headless execution (CLI tool)
-- [ ] Bundle-able dependencies to be packaged as a Docker image, to be executed using GitLab Runner's [Linux or Windows Docker executor](https://docs.gitlab.com/runner/executors/README.html#docker-executor)
+- [ ] Bundle-able dependencies to be packaged as a Docker image, to be executed using GitLab Runner's [Linux or Windows Docker executor](https://docs.gitlab.com/runner/executors/docker.html)
 - [ ] Compatible projects can be detected based on filenames or extensions
 - [ ] Offline execution (no Internet access) or can be configured to use custom proxies and/or CA certificates
 
