--- a/people-group/contracts-probation-periods/index.html.md.erb
+++ b/people-group/contracts-probation-periods/index.html.md.erb
@@ -203,23 +203,26 @@ For any approved outside activity in which the GitLab team member will use their
 
 ## Annual Code of Business Conduct & Ethics Administration Process
 
-Employees are required to review and acknowledge GitLab's [Code of Business Conduct & Ethics](https://ir.gitlab.com/static-files/7d8c7eb3-cb17-4d68-a607-1b7a1fa1c95d) (aka "CoBCE") upon starting employment at GitLab, and annually thereafter. The [People Connect team](https://about.gitlab.com/job-families/people-group/people-connect/) oversees the annual CoBCE signature process, with the [People Connect Team](https://about.gitlab.com/job-families/people-group/people-connect/) administering and tracking [signature completion of new hires](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/onboarding_process/#request-signature-for-code-of-conduct-2021-acknowledgement-of-relocation-2021-consent-to-collect-and-use-data-regarding-race-ethnicity-and-social-media-policy-acknowledgment) as well as all team members during the annual signature process. The annual signature process occurs between February and April. Process steps include:
+Employees are required to review and acknowledge GitLab's [Code of Business Conduct & Ethics](https://ir.gitlab.com/static-files/7d8c7eb3-cb17-4d68-a607-1b7a1fa1c95d) (aka "CoBCE") upon starting employment at GitLab, and annually thereafter, regardless if there are any changes to the code. 
 
-1. Legal reviews the most current version of the CoBCE. If any changes are suggested, they are incorporated and a most up-to-date version is created and updated in our handbook.  
-1. The most current and updated CoBCE is uploaded to BambooHR and is formatted as a Signature Document, with fields for team member name, signature, and date.
-1. The People Connect Team member crafts communications for the announcement of the process and specific email that will attach the signature request. Legal and the Internal Communications team will review and approve these communications.
-1. The People Connect Team member announces to all team members (in Slack, email, and relevant call if necessary) that the annual CoBCE signature process is set to launch, and that the process will have a 30-day due date for 100% signature adherence.
-1. The People Connect Team member creates the distribution list based on those who have not signed a CoBCE within the last three months prior to sending the new CoBCE.  
-1. The People Connect Team sends out the CoBCE to all relevant team members from BambooHR by email. 
-1. The People Connect Team member will report weekly on progress, send reminders, and follow the escalation process. 
+The [People Connect Team](https://about.gitlab.com/job-families/people-group/people-connect/) tracks the Code of Business Conduct & Ethics [signature completion by new hires](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/onboarding_process/#request-signature-for-code-of-conduct-2021-acknowledgement-of-relocation-2021-consent-to-collect-and-use-data-regarding-race-ethnicity-and-social-media-policy-acknowledgment) during onboarding. The [People Compliance team](https://about.gitlab.com/job-families/people-group/people-compliance/) oversees and administers the annual signature process, which is tracked and distributed through Workday. The annual signature process usually launches in April if every year. Process steps include:
+
+1. Legal reviews the most current version of the CoBCE. If any changes are suggested, they are incorporated and a most up-to-date version is created and updated to the Investor Relations section of our handbook.  
+1. The most current and updated CoBCE is uploaded to Workday and is formatted as to log team member's acknowledgment of the document, as well as the date it was acknowledged.
+1. The People Compliance team crafts communications for the announcement of the process as well as any reminders and escalation. Legal and People leadership will review and approve these communications.
+1. The People Compliance team announces to all team members (in Slack and email) that the annual CoBCE signature process is set to launch, and that the process will have a 30-day due date for 100% signature adherence.
+1. The People Compliance Team creates the distribution list based on those who have not signed a CoBCE within the last three months prior to sending the new CoBCE.  
+1. The People Compliance Team launches the CoBCE to all relevant team members from Workday.
+1. At two and three weeks post-launch, reminders from Workday are sent to individual team members who have not yet signed.
+1. At four weeks post-launch, a final reminder email is sent to individual team members who have not yet signed, cc'ing their managers.
+1. The People Compliance team will report weekly on progress and follow the escalation process after the 30 day window closes.
 
 ### Code of Business Conduct & Ethics Escalation Process
 
-1. Starting at two weeks post-launch, a reminder email is sent to individual team members who have not yet signed.
-1. At three weeks post-launch, a second reminder email is sent to individual team members who have not yet signed, cc'ing their managers.
-1. At four weeks post-launch, a third reminder email is sent to individual team members who have not yet signed, cc'ing their managers and next-level leaders.  
-1. Past the 30-day due date, People Compliance will follow up with all team members who have not signed the CoBCE to indicate that their signature is required.  
-1. People Compliance will alert Legal, who will provide guidance on next steps. 
+1. At five weeks post-launch, People Compliance will send an escalation notification from Workday to individual team members who have not signed.
+1. At six weeks post-launch, individual managers of direct reports who have not signed will receive ecalation emails. 
+1. People Compliance will then follow the additional escalation process as described in the [internal People Operations](https://gl-people-operations.gitlab.io/internal-handbook/people_compliance/code_of_conduct) handbook. All communications templates are also found on this same page.
+
 1. All escalation communication for any team member who has still not signed the CoBCE must be saved in the team member's Workday Documents folder.
 1. Team members must be aware that failure to sign the Code of Business Conduct & Ethics may result in consequences up to and including offboarding, due to values misalignment. 
 
