--- a/product/cross-stage-features/index.html.md.erb
+++ b/product/cross-stage-features/index.html.md.erb
@@ -4,7 +4,7 @@ title: Collaboration on shared feature and experience areas
 description: "Collaboration process and documentation of shared feature areas for product groups"
 ---
 
-### Cross-stage feature collaboration
+## Cross-stage feature collaboration
 
 Each stage is responsible for building functionality that furthers their vision and direction. Even if some components of that functionality happen to cross into spaces typically owned by other stages, they should still build it (if it's important to them).
 
@@ -24,8 +24,20 @@ Below is a guide to help other product groups understand how to work on these ar
 
 This section is modeled after the engineering handbook version of [ownership of shared services and components](/handbook/engineering/development/#ownership-of-shared-services-and-components).
 
-#### Shared Features
+### Existing Cross-Stage Capabilities
+- [Merge Requests](https://docs.gitlab.com/ee/user/project/merge_requests/) - also see [collaboration process](/handbook/product/cross-stage-features/merge-requests) 
+- [Define your CI/CD pipelines directly in your repository](https://docs.gitlab.com/ee/ci/yaml/gitlab_ci_yaml.html)
+- [Releases associated to milestones](https://docs.gitlab.com/ee/user/project/releases/#associate-milestones-with-a-release)
+- [Generate a Release from .gitlab-ci.yml](https://docs.gitlab.com/ee/ci/yaml/#release)
+- [Create a GitLab or Jira issue from a vulnerability](https://docs.gitlab.com/ee/user/application_security/vulnerabilities/#create-an-issue-for-a-vulnerability)
+- [Create a merge request from an issue](https://docs.gitlab.com/ee/user/project/repository/web_editor.html#create-a-new-branch-from-an-issue)
+- [Measure DevOps success via the DORA metrics](https://docs.gitlab.com/ee/api/dora4_project_analytics.html)
+- [Create Incidents as an Issue Type](https://docs.gitlab.com/ee/operations/incident_management/manage_incidents.html#from-the-issues-list)
+- [Connect your clusters via the CI/CD Tunnel](https://docs.gitlab.com/ee/user/clusters/agent/ci_cd_tunnel.html)
+- [Relate issues and Feature Flags](https://docs.gitlab.com/ee/operations/feature_flags.html#feature-flag-related-issues)
+- [Run multiple pipelines and project dependencies with multi-project pipelines](https://docs.gitlab.com/ee/ci/pipelines/multi_project_pipelines.html)
+- [Enable concurrency control during deployments with Resource Groups](https://docs.gitlab.com/ee/ci/resource_groups/)
+- [Associate job artifacts, or a generic package to a Release](https://docs.gitlab.com/ee/user/project/releases/)
 
-| Feature | Primary Group | Documentation |
-| :---- | :---- | :---- |
-| Merge Requests | [Code Review](/handbook/product/categories/#code-review-group) | [Link](/handbook/product/cross-stage-features/merge-requests) |
+### Planned Cross-Stage Improvements
+- [Software Supply Chain Security](https://about.gitlab.com/direction/supply-chain/)
