Add recent enablement resources as links

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -292,6 +292,8 @@ Solutions Architects should leverage the following [SA Actiity Types](https://ab
 
 ## Training and Enablement
 
+The single source of truth for training and VSA artifacts can be found on the associated [HighSpot page](https://gitlab.highspot.com/items/6418507b8913729120197bbf).
+
 ### Value Stream Assessment Overview
 
 This course is designed to provide an overview of how GitLab account teams should assist prospects and customers by providing a lightweight assessment of their value stream. The course outlines the approaches, tools, and artifacts used to conduct a value stream assessment for our prospects and customers.
@@ -299,7 +301,8 @@ This course is designed to provide an overview of how GitLab account teams shoul
 - [GitLab Value Stream Assessment Overview on LevelUp](https://levelup.gitlab.com/courses/value-stream-assessment)
 
 ### Past Enablement
-- [Past Field Enablement](https://youtu.be/jfM3AG6dBFY)
+- [2023-03-23 Webcast - Winning With Value Stream Assessments - Jonathan Fullam] (https://gitlab.highspot.com/items/641d1b3c054fb79cebe7288f)
+- [2022-02-03 Webcast - Value Stream Assessment - Simon Mansfield, Reshmi Krishna](https://youtu.be/jfM3AG6dBFY)
 
 ## How to Contribute
 
