--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -38,7 +38,7 @@ overall vision.
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[,&] Environments/, manager_slug: 'nicolo-maria-mezzopera') %>
+<%= stable_counterparts(role_regexp: /[,&] Deploy:Environments/, manager_slug: 'nicolo-maria-mezzopera') %>
 
 ## Common Links
 
