Removing old Treasury desktop procedures link

--- a/finance/accounting/index.html.md.erb
+++ b/finance/accounting/index.html.md.erb
@@ -912,8 +912,7 @@ GitLab has an established GL Accounting system for reporting specific expenses. 
 - Data
 
 #### Policy on Treasury activities
-(Open, closing of bank accounts, approvals, authorization matrix etc)
-[Desktop procedures](https://docs.google.com/document/d/1oNthwJ4aYRE5fpN5g1-G-4ejZ2yWUlfNW5JAF7CiP_A/edit?usp=sharing)
+Open, closing of bank accounts, approvals, authorization matrix etc
 
 #### Technical Accounting Performance Indicators
 ##### Deals reviewed for revenue recognition = 100%
