--- a/infrastructure/team/reliability/issues.html.md.erb
+++ b/infrastructure/team/reliability/issues.html.md.erb
@@ -249,6 +249,9 @@ It is important that the following is done on every epic so that status will be 
 1. In the epic description, there is a single line that designates the DRI. eg: `DRI: @username`
 1. In the epic description, there is a heading named Status followed by the current date eg: `## Status YYYY-MM-DD`. This section should be updated weekly with a short high level summary (one or two sentences) that will help management and team members outside of Reliability understand the current progress. This needs to be brief because it is rolled up into a table in the parent epic.
 
+**Note**: Epics that require status tracking should be updated each Wednesday.
+{: .alert .alert-info} 
+
 **Example**:
 
 ```markdown
