Link to sec section retro issues and template

--- a/development/sec/index.html.md.erb
+++ b/development/sec/index.html.md.erb
@@ -244,7 +244,7 @@ Ping the DRI for quality assigned to Secure. You can find the person on the [tea
 
 ## Section Retrospectives
 
-In addition to our group retrospectives, we hold a Sec Section level retrospective each month. The goal of the section wide retrospective is to review topics that bubbled-up from our group/team retrospectives. Additionally, we identify themes that could be discussed synchronously.  We use [this doc](https://docs.google.com/document/d/1g_FIMgr9r_Yf56xISxoI8B-1G-kbP3PQSeo7W-kKj24/edit#) to facilitate the section retrospective.
+In addition to our group retrospectives, we hold a Sec Section level retrospective each month. The goal of the section wide retrospective is to review topics that bubbled-up from our group/team retrospectives. Additionally, we identify themes that could be discussed synchronously.  We use [this doc](https://docs.google.com/document/d/1g_FIMgr9r_Yf56xISxoI8B-1G-kbP3PQSeo7W-kKj24/edit#) and an [issue](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/?search=retrospective&sort=updated_desc&state=closed&label_name%5B%5D=section%3A%3Asec&first_page_size=20) created with [this template](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/.gitlab/issue_templates/sec-section-retro.md) to facilitate the section retrospective.
 
 #### Key Dates
 
