Update Pricing Page

--- a/pricing/index.html.md.erb
+++ b/pricing/index.html.md.erb
@@ -16,7 +16,7 @@ GitLab's pricing strategy is set by the CEO, Sid Sibrandij. Everyone can contrib
 Contributions are part of the day-to-day jobs of the following people:
 - Principal Pricing Manager (Lisa Hoang)
 - Principal Pricing Manager (Sean Hall)
-- Sr. Pricing Analyst (Ishita Sharan)
+- Sr Director, Product Monetization (Justin Farris)
 - Product Marketing (Saumya Upadhyaya)
 
 ## Pricing Strategy
