add People Analytics page link

--- a/people-group/index.html.md.erb
+++ b/people-group/index.html.md.erb
@@ -252,7 +252,7 @@ If you need assistance reviewing your CultureAmp Survey, please complete this [i
 - [Benefits](/handbook/total-rewards/benefits/)
 - [Global Compensation](/handbook/total-rewards/compensation/)
 
-### People Success
+### People Operations
 
 - [Code of Business Conduct and Ethics](https://ir.gitlab.com/static-files/7d8c7eb3-cb17-4d68-a607-1b7a1fa1c95d)
 - [Promotions and Transfers](/handbook/people-group/promotions-transfers/)
@@ -263,6 +263,7 @@ If you need assistance reviewing your CultureAmp Survey, please complete this [i
 - [Offboarding](/handbook/people-group/offboarding/)
 - [Celebrations](/handbook/people-group/celebrations/)
 - [People Connect](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/people_connect_team/)
+- [People Analytics](/handbook/people-group/people-ops-tech-analytics/people-analytics/)
 
 ### Talent Acquisition
 
