Use the current milestone column before the ready-for-dev column

--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -185,7 +185,8 @@ Our goal is to move towards a continuous delivery model so the team completes ta
 
 - Team members self-assign issues from the [Milestone Board](https://gitlab.com/groups/gitlab-org/-/boards/4176401?label_name[]=group%3A%3Aenvironments&?not[label_name][]=configure%3A%3Aparked) that are in the `workflow:ready for development` column and has the current milestone.
 -  `~Deliverable` issues take priority over any other work, as they are the main focus of each milestone and inform our [say-do ratio](#say-do-ratio).
-- Once a team member has completed their assigned issues, they are expected to go to the Milestone Board and assign themselves to the next unassigned `workflow:ready for development` issue.
+- Once a team member has completed their assigned issues, they are expected to go to the Milestone Board and assign themselves to the next unassigned issue from the current milestone.
+- If there are no more issues in the current milestone, engineers are expected to assign themselves to the next unassigned `workflow:ready for development` issue.
 - The issues on the board are in priority order based on importance (the higher they are on the list, the higher the priority). This order is set by the product manager.
 - If all issues are assigned for the milestone, team members are expected to identify the next available issue to work on based on the team's work prioritization (see below).
 - While backstage work is important, in the absence of specific prioritization, the team will have a bias towards working on `bug` or `feature` categorized issues.
