Added all permanent Dedicated team members to Dedicated team page

--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -34,10 +34,19 @@ Team performance indicators are not fully defined. We are going to consider a **
 
 ## Team Members
 
-
 Engineering team members of GitLab Dedicated are publicly referenced with specialty for `Environment Automation`, `Switchboard` or `US Public Sector Services` team, based on their primary task.
 
+The following people are members of the Dedicated:Environment Automation Team:
+
 <%= direct_team(manager_slug: 'o-lluch')%>
+
+The following people are members of the Dedicated:US Public Sector Services Team:
+
+<%= direct_team(manager_slug: 'sdumesnil')%>
+
+The following people are members of the Dedicated:Switchboard Team:
+
+<%= direct_team(manager_slug: 'ashiel')%>
 
 ## Working with us
 
