Alan is Fullstack Engineering Manager

--- a/development/sec/govern/index.html.md.erb
+++ b/development/sec/govern/index.html.md.erb
@@ -51,7 +51,7 @@ The following members of other functional teams are our stable counterparts:
         'Fullstack Engineering Manager, Govern:Compliance',
         'Fullstack Engineering Manager, Govern:Threat Insights',
         'Fullstack Engineering Manager, Govern:Threat Insights',
-        'Interim Fullstack Manager, Govern:Security Policies',
+        'Fullstack Engineering Manager, Govern:Security Policies',
         'Director of Engineering for Growth, Sec, and Data Science',
         'Senior Engineering Manager, Anti-Abuse, Govern, and Growth'
       ])
