Renaming "CI minutes" to "Compute credits"

--- a/product/categories/verify/index.html.md.erb
+++ b/product/categories/verify/index.html.md.erb
@@ -59,7 +59,7 @@ The noted DRI still owns decision-making and is still responsible for notifying/
 |CI Pipeline Execution and Performance|RAILS|Features and capabilities for running or triggering a pipeline in the GitLab UI.|CI PM |CI EM - Cheryl Li|N/A|
 |CI/CD Queueing GitLab SaaS and Self-Managed|RAILS|CI jobs queueing architecture.| Pipeline Execution PM |Lead engineers: Kamil Trzciński , Grzegorz Bizon, Stan Hu|
 |CI/CD Fair Scheduling GitLab SaaS |RAILS|CI jobs fair scheduling architecture and configuration.|Pipeline Execution PM |Lead engineers: Kamil Trzciński , Grzegorz Bizon, Stan Hu|
-|CI Minutes Configuration for GitLab SaaS|RAILS|Changes to CI minutes configuration for customers on GitLab SaaS.|Pipeline Execution PM |Lead engineers: Kamil Trzciński , Grzegorz Bizon, Stan Hu|
+|Compute credits Configuration for GitLab SaaS|RAILS|Changes to compute credits configuration for customers on GitLab SaaS.|Pipeline Execution PM |Lead engineers: Kamil Trzciński , Grzegorz Bizon, Stan Hu|
 
 ### Workflow
 
