--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -464,7 +464,7 @@ Below are examples of changes that can be high risk because they can require coo
 * Launching a new paid feature
 * Deprecating an existing paid feature
 * Changes to terms of service and related contract changes
-* Changes to the way the consumption of resources is calculated or displayed (e.g., user counts, CI minutes)
+* Changes to the way the consumption of resources is calculated or displayed (e.g., user counts, compute credits)
 
 Below are changes that can often be low risk:
 * Backend enhancements that are not yet used by the frontend
