Use term "team member" instead of employee

--- a/people-policies/index.html.md.erb
+++ b/people-policies/index.html.md.erb
@@ -121,7 +121,7 @@ As stated in the **Confidentiality and Corporate Assets and Corporate Opportunit
 - (6) other non-public information
 
 This information, if disclosed, might be of use to competitors, or harmful to GitLab's suppliers, customers or other business partners. This information is the property of GitLab, or the property of its suppliers,
-customers or business partners, and in many cases was developed at great expense. All team members, upon commencement of employment with GitLab, shall sign offer letters or contractor agreements that contain confidentiality provisions (the “Confidentiality Agreement”) provided by
+customers or business partners, and in many cases was developed at great expense. All team members, upon commencement of their role with GitLab, shall sign offer letters or contractor agreements that contain confidentiality provisions (the “Confidentiality Agreement”) provided by
 GitLab. Strict adherence to the Confidentiality Agreement is required of each team member.
 
 Team members shall not take for themselves, or for family members or any other entities with which they are affiliated, any opportunity of which they become aware through the use of GitLab property or information, or through their position with GitLab, and shall not use GitLab property
@@ -145,13 +145,13 @@ The following states are considered “monopolistic” workers compensation stat
 
 ### Hiring Significant Others or Family Members
 
-GitLab is committed to a policy of employment and advancement based on **qualifications and merit** and does not discriminate in favor of or in opposition to the employment of significant others or family members. Due to the potential for perceived or actual conflicts, such as favoritism or personal conflicts from outside the work environment, which can be carried into the daily working relationship, GitLab will hire or consider other employment actions concerning significant others and/or family members of persons currently employed or contracted only if **all** points below are true:
+GitLab is committed to a policy of opportunities based on **qualifications and merit** and does not discriminate in favor of or in opposition to the employment or affiliation of significant others or family members. Due to the potential for perceived or actual conflicts, such as favoritism or personal conflicts from outside the work environment, which can be carried into the daily working relationship, GitLab will hire or consider consider for hire significant others and/or family members of persons currently serving as team members only if **all** points below are true:
 
-* Candidates for employment or current team members will not be working directly for or supervising a significant other or family member.
-* Candidates for employment or current team members will not occupy a position in the same line of authority in which team members can initiate or participate in decisions involving a direct benefit to the significant other or family member. Such decisions include hiring, retention, transfer, promotion, wages, [talent assessment](https://about.gitlab.com/handbook/people-group/talent-assessment/), and leave requests.
+* Candidates for open roles or current team members will not be working directly for or supervising a significant other or family member.
+* Candidates for open roles or current team members will not occupy a position in the same line of authority in which team members can initiate or participate in decisions involving a direct benefit to the significant other or family member. Such decisions include hiring, retention, transfer, promotion, wages, [talent assessment](https://about.gitlab.com/handbook/people-group/talent-assessment/), and leave requests.
 * The team member does not have access to sensitive company and/or personal information including payroll, compensation, personnel reviews/files, job performance, etc., unless the team member's job duties require access to such information.  If the position in question requires access to such information, the team member in that position shall comply with the duty to maintain confidentiality as governed by applicable law and policy, and must seek approval from the team member's direct manager for any decisions affecting the significant other or family member's personnel information.
 
-This policy applies to all current employees and candidates for employment. In the spirit of our [Transparency value](/handbook/values/#transparency), we ask the team member and the candidate to disclose the family relationship to the recruiter at the beginning of the hiring process. For purposes of this policy, a significant other or family member is any person who has a relation by blood, marriage, adoption, or domestic partnership within the third degree of our team member. If the candidate progresses through the process as a final candidate, and prior to any offer, the recruiter should notify the hiring manager and the People Business Partner of the family relationship to ensure there is not a conflict of interest.  In addition, the GitLab team member should not be part of their family member's interview process. If there is a concern that either the team member or the candidate may progress to a position that would trigger one of the conditions above a waiver will be signed by both parties acknowledging that future work assignments, promotions, etc may be impacted by enforcement of this policy. 
+This policy applies to all current team members and candidates for open roles. In the spirit of our [Transparency value](/handbook/values/#transparency), we ask the team member and the candidate to disclose the family relationship to the recruiter at the beginning of the hiring process. For purposes of this policy, a significant other or family member is any person who has a relation by blood, marriage, adoption, or domestic partnership within the third degree of our team member. If the candidate progresses through the process as a final candidate, and prior to any offer, the recruiter should notify the hiring manager and the People Business Partner of the family relationship to ensure there is not a conflict of interest.  In addition, the GitLab team member should not be part of their family member's interview process. If there is a concern that either the team member or the candidate may progress to a position that would trigger one of the conditions above a waiver will be signed by both parties acknowledging that future work assignments, promotions, etc may be impacted by enforcement of this policy. 
 
 #### Active Team Member Relationships (Significant Other or Family Members) 
 
@@ -161,7 +161,7 @@ Please report any relationship with a significant other or family member to your
 
 **Preventing Unsafe Situations**
 
-While GitLab is 100% remote, there may be times when employees travel for work related functions or co-working events.  GitLab is committed to the value of a safe, violence-free work environment and ensuring and exhibiting equal commitment to the safety and health of employees.
+While GitLab is 100% remote, there may be times when team members travel for work related functions or co-working events.  GitLab is committed to the value of a safe, violence-free work environment and ensuring and exhibiting equal commitment to the safety and health of team members.
 
 In general, please consider the following recommendations to ensure safety when traveling or coworking:
 
@@ -179,20 +179,20 @@ In general, please consider the following recommendations to ensure safety when 
 
 **Measures GitLab Takes to Aid Employee Health and Safety**
 1.	Hand sanitizers placed around venue of live events or attendees given hand sanitizer.
-1.	Employees can expense masks for travelling if suggested in risk assessment outlined above.
-1.	Sick employees should expense mask if flying.
+1.	Team members can expense masks for travelling if suggested in risk assessment outlined above.
+1.	Sick team members should expense masks if flying.
 1.	If health risk is considered high, all food to be served by food health professionals rather than team.
 1.	Fist bumps over handshakes.
-1.	Sick/ Contagious employees may not participate in team food preparation activities.
+1.	Sick/ Contagious team members may not participate in team food preparation activities.
 
 **Responding to Unsafe Situations:**
 
-The following are GitLab’s procedures in the event an employee feels threatened or unsafe:
+The following are GitLab’s procedures in the event a team member feels threatened or unsafe:
 
-1. If at any point, an employee feels that they are in danger of physical harm, please contact the local authorities immediately.  Local law enforcement can act quickly to protect the individual and neutralize any threats.
-1. If at any point an employee feels like they or another employee may require immediate medical assistance, please contact the local authorities.
-1. Once the immediate threat is controlled, employees should report any safety concerns to People Ops.
-1. If you believe that a certain location, event or area presents greater risk or exposure to individuals, please notify People Ops.  People Ops can proactively communicate the concerns to other potentially affected employees.
+1. If at any point, a team member feels that they are in danger of physical harm, please contact the local authorities immediately.  Local law enforcement can act quickly to protect the individual and neutralize any threats.
+1. If at any pointa team member feels like they or another team member may require immediate medical assistance, please contact the local authorities.
+1. Once the immediate threat is controlled, team members should report any safety concerns to People Ops.
+1. If you believe that a certain location, event or area presents greater risk or exposure to individuals, please notify People Ops.  People Ops can proactively communicate the concerns to other potentially affected team members.
 1. If at any point you believe you, personally, may commit an unsafe act, People Ops can assist in providing information about available [Employee Assistance Options](/handbook/total-rewards/benefits/general-and-entity-benefits/#employee-assistance-program).
 
 ### Background Screenings
