Add a Knowledge Eng Metrics dashboard

--- a/metrics/dev/plan/index.html.md.erb
+++ b/metrics/dev/plan/index.html.md.erb
@@ -10,6 +10,7 @@ title: "Plan Stage Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 ### Group Pages
+* [Knowledge Group Dashboards](/handbook/engineering/metrics/dev/plan/knowledge)
 * [Project Management Group Dashboards](/handbook/engineering/metrics/dev/plan/project-management)
 * [Product Planning Group Dashboards](/handbook/engineering/metrics/dev/plan/product-planning)
 * [Optimize Group Dashboards](/handbook/engineering/metrics/dev/plan/optimize)
