Update Import & Integrations refinement process

--- a/development/dev/manage/import/index.html.md.erb
+++ b/development/dev/manage/import/index.html.md.erb
@@ -115,22 +115,7 @@ Backlog management is very challenging, but we try to do so with the use of labe
 
 ##### Refinement
 
-**The end goal is defined,** where all direct stakeholders says “yes, this is ready for development”. Some issues get there quickly, some require a few passes back and forth to figure out.
-
-The goal is for engineers to have buy-in and feel connected to the roadmap. By having engineering included earlier on, the process can be much more natural and smooth.
-
-
-We have a weekly refinement process which consists of the following steps:
-
-* By Thursday every week Product Manager and Engineering Manager will add issues to the refinement board and label the 3 most important issues `ready for next refinement`.
-* In the following week, engineers, PM and UX will refine these 3 issues in the `ready for next refinement` column over a sync call (Tuesday, 08:30am CET). The discussion should be time-boxed and we aim on spending ~10mins per issue.
-* Before the sync call, engineers and UX should familiarize themselves with the `ready for next refinement` issues and bring up any questions in the issue.
-    * There will be a DRI for every refinement call.
-    * The DRI is responsible for taking notes in our weekly agenda during the call.
-    * After the refinement call the DRI updates issues with the relevant information (problems discussed, solution proposal, next steps, etc.)
-    * Once an issue is refined and a weight has been added the `workflow::ready for development` label should be added. Also, the `ready for next refinement` label should be removed afterwards. This will automatically add the issue to the build board.
-    * At the end of each refinement call the DRI for the next refinement call is selected (volunteers preferred).
-* We will be constantly reviewing the process in the monthly retrospective issues and make further adjustments if needed.
+We are following the [refinement process](handbook/engineering/development/dev/manage/integrations/#backlog-refinement) from Manage:Integrations.
 
 ##### Breaking down or promoting issues
 
